# opengl_start

./: CMakeLists.txt  README.md  engine.cxx  engine.hxx  fragment.frag  game.cpp  vertex.vert
glad/: glad.c  glad.h
